[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "pvlib"
description = "A set of functions and classes for simulating the performance of photovoltaic energy systems."
authors = [
    { name = "pvlib python Developers", email = "pvlib-admin@googlegroups.com" },
]
requires-python = ">=3.9, <3.13"
dependencies = [
    'h5py >=3.12, <4',
    'numpy >=1.19.3, <3',
    'pandas >=1.3.0, <3',
    'pytz',
    'requests >=2, <3',
    'scipy >=1.6.0, <2',
]
license = { text = "BSD-3-Clause" }
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering',
]
readme.text = """
pvlib python is a community developed toolbox that provides a set of
functions and classes for simulating the performance of photovoltaic
energy systems and accomplishing related tasks.  The core mission of pvlib
python is to provide open, reliable, interoperable, and benchmark
implementations of PV system models.

We need your help to make pvlib-python a great tool!

Documentation: http://pvlib-python.readthedocs.io

Source code: https://github.com/pvlib/pvlib-python
"""
readme.content-type = "text/x-rst"
dynamic = ["version"]


[project.optional-dependencies]
optional = [
    'cython',
    'ephem',
    'nrel-pysam; python_version <"3.13"',
    'numba >=0.17.0; python_version <"3.13"',
    'solarfactors; python_version <"3.12"',
    'statsmodels',
]
doc = [
    'docutils ==0.21',
    'ipython',
    'matplotlib',
    'pickleshare',  # required by ipython
    'pillow',
    'pydata-sphinx-theme ==0.15.4',
    'sphinx ==7.3.7',
    'sphinx-favicon',
    'sphinx-gallery',
    'sphinx-hoverxref',
    'sphinx-toggleprompt ==0.5.2',
    'solarfactors; python_version <"3.12"',
]
test = [
    'flake8 ==5.0.4',  # Should match version in github workflow flake8.yml.
    'packaging',
    'pytest',
    'pytest-cov',
    'pytest-mock',
    'pytest-remotedata',
    'pytest-rerunfailures',
    'pytest-timeout',
    'requests-mock',
]
all = ["pvlib[test,optional,doc]"]

[project.urls]
"Bug Tracker" = "https://github.com/pvlib/pvlib-python/issues"
Documentation = "https://pvlib-python.readthedocs.io/"
"Source Code" = "https://github.com/pvlib/pvlib-python"

[tool.setuptools.packages.find]
include = ["pvlib*"]

[tool.setuptools_scm]

[tool.pytest]
junit_family = "xunit2"
testpaths = "pvlib/tests"
# warning messages to suppress from pytest output.  useful in cases
# where a dependency hasn't addressed a deprecation yet, and there's
# nothing we can do to fix it ourselves.
# syntax is: action:message:category:module:lineno
# `message` is a regex matching start of warning message
# https://docs.python.org/3/library/warnings.html#the-warnings-filter
filterwarnings = [
    "ignore:Using or importing the ABCs:DeprecationWarning:.*patsy:",
    # deprecation warnings from numpy 1.20
    "ignore:`np.long` is a deprecated alias:DeprecationWarning:.*numba:",
    "ignore:`np.int` is a deprecated alias:DeprecationWarning:.*(numba|scipy):",
    "ignore:`np.bool` is a deprecated alias:DeprecationWarning:.*numba:",
]
